fine-tuned sentiment transformer

--- a/models/traits.ipynb
+++ b/models/traits.ipynb
@@ -427,6 +427,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "827 1015 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(pos_occ),len(neg_occ),len(neu_occ))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
