instructions for running

--- a/run.ipynb
+++ b/run.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
@@ -49,17 +49,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ending 0:  The next morning, he was attacked by an old woman who tried to kill himself with her scissors.\"\n",
-      "Ending 1:  When he returned to see what was happening, it turned out that this man wasn  who wanted nothing more than for me not be my husband again.\"\n",
-      "Ending 2:  The next morning, he was found dead on an empty street outside her home with no trace at all behind it.\"\n",
-      "Ending 3:  The next morning, he was found dead inside her bedroom with two stab wounds to both sides.\"\n",
-      "Ending 4:  The next morning, he was found dead on top floor with blood pouring out from inside her body.\"\n"
+      "Ending 1:  When he returned, it was clear that this man did not know how to deal with any other person who could be offended by one or more things on their way home from work.\"\n",
+      "Ending 2:  The next morning, he returned to find that it was still raining outside.\"\n",
+      "Ending 3:  When he returned to find that it was all gone, they found out what happened next: The intruder took off with an axe at once; then another one came running down from behind her as she tried desperately not get hit by any more arrows or bullets.\"\n",
+      "Ending 4:  The next morning, he found himself at work with an old man who was trying to sell some food for them on their way home from school when they got lost again.\"\n",
+      "Ending 5:  When he returned to find that there was nothing on earth, it caused them all trouble.\"\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "from models import StoryEndingGenerator, SentimentAnalysis, to_encode_string, perplexity\n",
+    "from models import StoryEndingGenerator, to_encode_string\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"True\"\n",
     "\n",
     "def get_first_sentence(ending):\n",
@@ -68,7 +68,7 @@
     "    cleaned_sentence = ' '.join(word for word in first_sentence.split(' ') if word != '[PAD]')\n",
     "    return cleaned_sentence\n",
     "\n",
-    "# input path to model downloaded from Google Drive\n",
+    "# input path to model downloaded from OneDrive\n",
     "ending_model = StoryEndingGenerator(\"NLP_last_model\")\n",
     "\n",
     "# Provide context of characters in stories in list form ex. [\"Jane negative\", \"George positive\" ...]\n",
@@ -86,8 +86,68 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T20:57:21.945619Z",
-     "end_time": "2023-05-24T20:58:51.676402Z"
+     "start_time": "2023-05-25T20:04:58.539120Z",
+     "end_time": "2023-05-25T20:05:40.506744Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you also want to try our fine-tune Sentiment Analysis model then you can cheek also this.\n",
+    "\n",
+    "From [here](https://drive.google.com/file/d/1AJUJJIqDjHqGwzm1zOueAJIE631bACat/view?usp=sharing) download fine-tune model and use it in the code below"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/lukabrecelj/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M2 Pro\n",
+      "Pretrained Sentiment model: {'Annie': 'positive', 'Bob': 'positive'}\n",
+      "Fine-tune Sentiment model: {'Annie': 'negative', 'Bob': 'negative'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from models import SentimentAnalysis\n",
+    "\n",
+    "\n",
+    "# Please provide path to downloaded sentiment model\n",
+    "sentiment = SentimentAnalysis(\"sentiment_model\")\n",
+    "\n",
+    "# Please enter sentences that include specific names for Sentiment Analysis\n",
+    "sentence = \"Bob is a evil and a thief, but in love with Annie.\"\n",
+    "\n",
+    "characters = sentiment.detect_characters(sentence)\n",
+    "character_sentences = sentiment.extract_character_sentences(sentence, characters)\n",
+    "character_sentiments = sentiment.sentiment_analysis(character_sentences)\n",
+    "character_sentiments_fine = sentiment.fine_tuned_sentiment_analysis(character_sentences)\n",
+    "\n",
+    "print(\"Pretrained Sentiment model:\", character_sentiments)\n",
+    "print(\"Fine-tune Sentiment model:\", character_sentiments_fine)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-25T20:25:52.524510Z",
+     "end_time": "2023-05-25T20:26:02.992098Z"
     }
    }
   }
