--- a/run.ipynb
+++ b/run.ipynb
@@ -36,12 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/lukabrecelj/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     },
@@ -49,17 +52,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ending 1:  When he returned, it was clear that this man did not know how to deal with any other person who could be offended by one or more things on their way home from work.\"\n",
-      "Ending 2:  The next morning, he returned to find that it was still raining outside.\"\n",
-      "Ending 3:  When he returned to find that it was all gone, they found out what happened next: The intruder took off with an axe at once; then another one came running down from behind her as she tried desperately not get hit by any more arrows or bullets.\"\n",
-      "Ending 4:  The next morning, he found himself at work with an old man who was trying to sell some food for them on their way home from school when they got lost again.\"\n",
-      "Ending 5:  When he returned to find that there was nothing on earth, it caused them all trouble.\"\n"
+      "Ending 1:  The next morning, he found himself on top with two other people who were sitting at an empty table while they watched TV from their windows.\"\n",
+      "Ending 2:  The next morning, he was attacked by another person who tried to steal her purse from an elderly woman while she slept on top at their home.\"\n",
+      "Ending 3:  The next morning, he was arrested for stealing from another man who lived nearby with them; this time it wasn  that happened to be Mr Gwynn.\"\n",
+      "Ending 4:  The other guests were not so lucky, but they managed to escape from their danger by going back into town with them.\"\n",
+      "Ending 5:  The other guests then fled, but they did not find them yet.\"\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "from models import StoryEndingGenerator, to_encode_string\n",
+    "from src.utils import StoryEndingGenerator, to_encode_string\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"] = \"True\"\n",
     "\n",
     "def get_first_sentence(ending):\n",
@@ -86,8 +89,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T20:04:58.539120Z",
-     "end_time": "2023-05-25T20:05:40.506744Z"
+     "start_time": "2023-05-26T19:18:48.049085Z",
+     "end_time": "2023-05-26T19:19:37.549530Z"
     }
    }
   },
@@ -104,17 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/lukabrecelj/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -126,7 +120,7 @@
     }
    ],
    "source": [
-    "from models import SentimentAnalysis\n",
+    "from src.utils import SentimentAnalysis\n",
     "\n",
     "\n",
     "# Please provide path to downloaded sentiment model\n",
@@ -146,8 +140,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T20:25:52.524510Z",
-     "end_time": "2023-05-25T20:26:02.992098Z"
+     "start_time": "2023-05-26T19:20:13.864964Z",
+     "end_time": "2023-05-26T19:20:23.660521Z"
     }
    }
   }
