--- a/run.ipynb
+++ b/run.ipynb
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/lukabrecelj/nltk_data...\n",
+      "[nltk_data]     /Users/luka/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
@@ -107,15 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metal device set to: Apple M2 Pro\n",
-      "Pretrained Sentiment model: {'Annie': 'positive', 'Bob': 'positive'}\n",
-      "Fine-tune Sentiment model: {'Annie': 'negative', 'Bob': 'negative'}\n"
+      "Pretrained Sentiment model: {'Bob': 'positive'}\n",
+      "Fine-tune Sentiment model: {'Bob': 'negative'}\n"
      ]
     }
    ],
@@ -127,7 +126,7 @@
     "sentiment = SentimentAnalysis(\"sentiment_model\")\n",
     "\n",
     "# Please enter sentences that include specific names for Sentiment Analysis\n",
-    "sentence = \"Bob is a evil and a thief, but in love with Annie.\"\n",
+    "sentence = \"Bob is a evil and a thief, but in love with God.\"\n",
     "\n",
     "characters = sentiment.detect_characters(sentence)\n",
     "character_sentences = sentiment.extract_character_sentences(sentence, characters)\n",
@@ -140,9 +139,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T19:20:13.864964Z",
-     "end_time": "2023-05-26T19:20:23.660521Z"
+     "start_time": "2023-05-26T22:13:24.553057Z",
+     "end_time": "2023-05-26T22:13:32.617782Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
